# A-Compiler-for-C-minus

./: .gitignore  CMakeLists.txt  README.md  ScannerOutput.txt  grammar.txt  main.cpp  run.sh  testFile.c
CodeGen/: CogeGen.cpp  CogeGen.h  VM.cpp  VM.h  main.cpp
Parser/: Parse.cpp  Parse.h  fixTree.cpp  fixTree.h  grammar.txt  grammer.cpp  grammer.h  symbol.h  util.h
Scanner/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  Scan.cpp  Scan.h  a.out  regex.cpp  regex.h  run.sh
